# next-config

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs  migration.rs
next-config-macro/: Cargo.toml
next-config-macro/src/: lib.rs
next-config-macros/: Cargo.toml
next-config-macros/src/: lib.rs
src/: atomic.rs  config.rs  error.rs  global.rs  lib.rs  migration.rs  store.rs
tests/: config_tests.rs  integration_test.rs  migration_tests.rs
