[package]
name = "next-config"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4.3"
next-config-macro = { path = "next-config-macro", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = { version = "0.9.10", features = ["serde"] }
