[package]
name = "next-config"
authors = ["Inam Ul Haq <inam123451@gmail.com"]
version = "0.1.0"
edition = "2024"

[dependencies]
inventory = "0.3.21"
serde = { version = "1.0.228", features = ["derive"] }
serde-value = "0.7.0"
thiserror = "2.0.17"
toml = "0.9.10"

[dev-dependencies]
tempfile = "3.15"
