[package]
name = "next-config"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inventory.workspace = true
next-config-macros = { path = "./next-config-macros" }
serde.workspace = true
serde-value.workspace = true
thiserror.workspace = true
toml = "0.9.10"

[dev-dependencies]
tempfile = "3.15"
